# pip-resolved

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
pip_resolved/: main.py
