[project]
name = "pip-resolved"
version = "0.1.1"
description = "Install wheels with pre-resolved dependencies"
authors = [
    {name = "Lucas Cardozo", email = "lucasecardozo@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
pip-resolved = "pip_resolved.main:main"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.10.0",
    "flake8>=5.0.4",
]
